# digit_classifier_accelerator

./: .gitignore  knn.h  knn_test.cpp
_ide/: .peers.ini  settings.json  version.ini  workspace_journal.py  workspace_journal_10032.py  workspace_journal_18276.py  workspace_journal_21392.py  workspace_journal_22824.py  workspace_journal_25628.py  workspace_journal_7948.py
_ide/.wsdata/: clang_dir_map.json
include/: knn.h
knn_accelerator/: compile_commands.json  hls_config.cfg  vitis-comp.json
knn_accelerator/.cache/clangd/index/: knn.cpp.2B038CF64D423EC8.idx  knn.h.0AB114F268915BEC.idx  knn_test.cpp.34DFB4A89D99B3E6.idx
knn_accelerator/knn_accelerator/: knn_accelerator.hlscompile_summary  knn_accelerator.hlsrun_cosim_summary  knn_accelerator.hlsrun_csim_summary  knn_accelerator.hlsrun_impl_summary  knn_accelerator.hlsrun_package_summary  vitis-comp.json
knn_accelerator/knn_accelerator/hls/: config.cmdline  hls_data.json
knn_accelerator/knn_accelerator/hls/.autopilot/: .autosim_exit
knn_accelerator/knn_accelerator/hls/.autopilot/db/driver/src/: CMakeLists.txt  xknn_accelerator.h  xknn_accelerator_linux.c  xknn_accelerator_sinit.c
knn_accelerator/knn_accelerator/hls/.debug/: knn_accelerator.protoinst
knn_accelerator/knn_accelerator/hls/sim/: .autosim.status  knn_accelerator_cosim_random_stall.json
knn_accelerator/knn_accelerator/reports/: hls_compile.rpt  hls_cosim.rpt  hls_impl_pnr.rpt  hls_impl_syn.rpt  v++_compile_knn_accelerator_guidance.html
src/: digit_recognition_system.ipynb  knn.cpp
test/: knn_test.cpp
(+528 files in other folders)
